# movie-recommender

./: .gitignore  LICENSE  app.py  config.py  config.toml  main.py  pyproject.toml
data/: main_universe_extracted.parquet
pipeline/: extract.py  get_bayesian_rating.py  method_simple_composite.py  method_tfidf_plot_similarity.py  method_vector_similarity.py  recommend.py  recommend_similar.py  transform.py
src/movie_recommender/: config.py
src/movie_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/movie_recommender/backend/: run_pipeline.py
src/movie_recommender/backend/app/: app.py  recommendations.py
src/movie_recommender/backend/pipeline/: extract.py  recommend.py  transform.py
src/movie_recommender/backend/pipeline/metrics/: get_bayesian_rating.py  method_simple_composite.py  method_vector_similarity.py
src/movie_recommender/frontend/: index.html  script.js  styles.css
