[project]
name = "movie-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars>=1.36.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
]
